# Calculator

./: Base_operation.h  CMakeLists.txt  CmakeLists.txt  PluginAdapter.h  README.md  Tree.h  command.cpp  loader.cpp  loader.h  parser.cpp  test.cpp
Private/: Engine.cpp  main.cpp
Public/: Engine.h  ICommand.h  Subject.h  Wrapper.h
h/: Register.h
include/: BaseOperationClass.h  Base_operation.h  ErrorMessage.h  Operator.h  PluginAdapter.h  parser.h  vocabulary.h
plugins_view/funccos/: funccos.cpp  funccos.h
plugins_view/funcln/: funcln.cpp  funcln.h
plugins_view/funcpow/: ErrorMessage.cpp  funcpow.cpp  funcpow.h
plugins_view/funcsin/: funcsin.cpp  funcsin.h
src/: Register.cpp  Tree.cpp  loader.cpp  main.cpp  parser.cpp  vocabulary.cpp
